--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="name">Name</string>
+    <string name="count">Count:</string>
+    <string name="save">Save</string>
+    <string name="error_input_count">Ошибка ввода количества</string>
+    <string name="error_input_name">Ошибка ввода имени</string>
 </resources>
